[package]
name = "qweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-ws = "0.3"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qlib-rs = { "path"="../qlib-rs" }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8.4"
base64 = "0.22"
